--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "coffee-script": "^1.8.0",
     "gulp": "^3.8.10",
     "gulp-jade": "^0.9.0",
+    "gulp-stylus": "^1.3.4",
     "jade": "^1.7.0",
     "marked": "^0.3.2",
     "stylus": "^0.49.3"
