--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   },
   "description": "CSS test page",
   "devDependencies": {
-    "coffee-script": "^1.8.0",
-    "gulp": "^3.8.10",
-    "gulp-jade": "^0.9.0",
-    "gulp-stylus": "^1.3.4",
-    "jade": "^1.7.0",
-    "marked": "^0.3.2",
-    "stylus": "^0.49.3"
+    "coffee-script": "^1.9.3",
+    "gulp": "^3.9.0",
+    "gulp-jade": "^1.0.1",
+    "gulp-stylus": "^2.0.5",
+    "jade": "^1.11.0",
+    "jstransformer-marked": "0.0.1",
+    "marked": "^0.3.3",
+    "stylus": "^0.51.1"
   },
   "keywords": [
     "CSS",
