--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "url": "https://github.com/MattMS/css.mattms.info.git"
   },
   "scripts": {
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "version": "0.1.0"
